Make ResourceLoadDelegate print URLs relative to the main resource on Windows

This matches Mac. (In fact, the code was ported from Mac!)

Fixes <http://webkit.org/b/55328> URLs printed by ResourceLoadDelegate on Windows don't
match Mac

Reviewed by Anders Carlsson.

* DumpRenderTree/win/DumpRenderTree.cpp:
(substringFromIndex): Added. Emulates -[NSString substringFromIndex:].
(urlSuitableForTestResult): Ported code from -[NSURL(DRTExtras)
_drt_descriptionSuitableForTestResult].
(cfStringRefToWString): Moved here from LayoutTestControllerWin.cpp.

* DumpRenderTree/win/DumpRenderTreeWin.h: Added declaration of cfStringRefToWString.

* DumpRenderTree/win/LayoutTestControllerWin.cpp: Moved cfStringRefToWString to
DumpRenderTree.cpp.

Canonical link: https://commits.webkit.org/69744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79827 268f45cc-cd09-0410-ab3c-d52691b4dbfc